update resume include grindcheck and rename hover variables

--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Mark Siegrist</h1>
     <h2>Web Developer</h2>
-    <p>770.598.5573 - m.siegrist92@gmail.com</p>
+    <p>m.siegrist92@gmail.com - Chattanooga, TN</p>
     <h1>Skills</h1>
 
     <div id="skills_cont">
@@ -20,27 +20,28 @@
       <img id="css_logo" src="images/css_logo.png">
       <img id="html_logo" src="images/html_logo.png">
       <img id="nodejs_logo" src="images/nodejs_logo.png">
+      <img id='mongodb_logo' src="images/mongodb.png">
     </div>
 
     <h1>Projects</h1>
     <div id="proj_cont">
       <div class='proj' id="proj_1">
-        <h2>SkateRev.com</h2>
+        <h2>GrindCheck</h2>
         <!--hover over img to show different page-->
-        <a class='sample' id="switch" href="https://www.skaterev.com">
-          <img id="mob_samp" style="display: block;"src="images/mob_samp.png">
-          <img id="doa_samp" style="display: none;" src="images/doa_tablet.jpg">
+        <a class='sample' id="switch" href="https://www.grind-check.herokuapp.com">
+          <img id="to_show" style="display: block;"src="images/gcdemo.gif">
+          <img id="on_hover" style="display: none;" src="images/gc_cal.png">
         </a>
-        <a class='git' href="https://github.com/msiegrist92/skaterev-1.1-responsive">
+        <a class='git' href="https://github.com/msiegrist92/journal_app">
           <img src="images/github.png">
         </a>
-        <p>SkateREV is an online review website that also serves as my design playground. Whenever I publish a new review, I take it ground up - from mock-ups, to coding, to responsive design. SkateREV gives me the opportuntiy to experiment with new ideas and combines two of my passions.</p>
+        <p>GrindCheck is an online journaling application that allows users to track daily activities such as sleep, diet, finances and notes about work and exercise. Users create an account and can create, edit and search for their entries. A calendar page and recent entries page allow users to view their entries and track their progress. </p>
         <button>Skills</button>
         <ul style='opacity: 0'>
-          <li>CSS Grid</li>
-          <li>Javascript</li>
-          <li>Inkscape</li>
-          <li>Photoshop Elements</li>
+          <li>ExpressJS</li>
+          <li>MongoDB & Mongoose</li>
+          <li>Node.js & NPM</li>
+          <li>Handlebars</li>
         </ul>
       </div>
       <div class='proj' id="proj_2">
@@ -62,7 +63,17 @@
     </div>
   </div>
   <h1>Goals</h1>
-  <p id="summary">I am seeking an entry level position to gain experience and apply my skillset to new problems. I have some college experience but elected to go the self-taught route so I could focus on technologies and projects that interest me. I am currently learning full stack development with MongoDB, Express, Node and React.</p>
+  <p id="summary">I am seeking an entry level position as a web developer. I am eager to apply my skillset to new problems while continuing to expand my knowledge. While pursuing a degree at Chattanooga State, I'm also working on personal projects and learning MERN stack development.</p>
+  <button id="education">Education</button>
+  <ul style='opacity: 0'>
+    <li>North Forsyth High School</li>
+    <br>
+    <li>Kennesaw State University</li>
+    <li class='clist'>College Algrebra, Composition 1 & 2, Ways of Knowing</li>
+    <br>
+    <li>Chattanooga State Community College</li>
+    <li class='clist'>Currently Attending - Associate's Computer Programming</li>
+  </ul>
     <script src="script.js"></script>
   </body>
 </html>
