--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,7 @@
       <div class='proj' id="proj_1">
         <h2>GrindCheck</h2>
         <!--hover over img to show different page-->
-        <a class='sample' id="switch" href="https://www.grind-check.herokuapp.com">
+        <a class='sample' id="switch" href="https://grind-check.herokuapp.com">
           <img id="to_show" style="display: block;"src="images/gcdemo.gif">
           <img id="on_hover" style="display: none;" src="images/gc_cal.png">
         </a>
