resume update november

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,15 +16,24 @@
     <h1>Skills</h1>
 
     <div id="skills_cont">
-      <img id="js_logo" src="images/js_logo.png">
-      <img id="css_logo" src="images/css_logo.png">
-      <img id="html_logo" src="images/html_logo.png">
-      <img id="nodejs_logo" src="images/nodejs_logo.png">
-      <img id='mongodb_logo' src="images/mongodb.png">
+      <div id='first_row'>
+        <img id="js_logo" src="images/js_logo.png">
+        <img id="css_logo" src="images/css_logo.png">
+        <img id="html_logo" src="images/html_logo.png">
+        <img id="nodejs_logo" src="images/nodejs_logo.png">
+      </div>
+      <div id="second_row">
+        <img id='mongodb_logo' src="images/mongodb.png">
+        <img id="nextjs_logo" src='images/next_logo.png'>
+        <img id='react_logo' src='images/react_logo.png'>
+        <img id='sass_logo' src="images/sass_logo.png">
+      </div>
     </div>
 
     <h1>Projects</h1>
+
     <div id="proj_cont">
+
       <div class='proj' id="proj_1">
         <h2>GrindCheck</h2>
         <!--hover over img to show different page-->
@@ -35,7 +44,7 @@
         <a class='git' href="https://github.com/msiegrist92/journal_app">
           <img src="images/github.png">
         </a>
-        <p>GrindCheck is an online journaling application that allows users to track daily activities such as sleep, diet, finances and notes about work and exercise. Users create an account and can create, edit and search for their entries. A calendar page and recent entries page allow users to view their entries and track their progress. </p>
+        <p>GrindCheck is an online journaling application that allows users to track daily activities such as sleep, diet, finances and notes about work and exercise. Users create an account and can create, edit and search for their entries. A calendar page and recent entries page allow users to view their entries and track their progress. GC is deployed on the cloud with Heroku and MongoDB Atlas. </p>
         <button>Skills</button>
         <ul style='opacity: 0'>
           <li>ExpressJS</li>
@@ -44,6 +53,7 @@
           <li>Handlebars</li>
         </ul>
       </div>
+
       <div class='proj' id="proj_2">
         <h2>Sixth Man NBA Stats</h2>
         <a class='sample' href="https://quiet-coast-16574.herokuapp.com/">
@@ -62,8 +72,23 @@
         </ul>
     </div>
   </div>
+
+  <h1>Experience</h1>
+  <div class='proj'>
+    <h2>Technologic, LLC</h2>
+    <h3>Freelance Web Developer</h3>
+    <h4>October, 2020 - Current</h4>
+    <ul>
+      <li>Developed a headless CMS geared towards SEO using NextJS, Strapi and Materialize CSS</li>
+      <br>
+      <li>Created page templates for CMS to ensure consistent styling and seamless entry of content </li>
+      <br>
+      <li>Collaborated directly with owner on code management, new functionality, and project deadlines</li>
+    </ul>
+  </div>
+
   <h1>Goals</h1>
-  <p id="summary">I am seeking an entry level position as a web developer. I am eager to apply my skillset to new problems while continuing to expand my knowledge. While pursuing a degree at Chattanooga State, I'm also working on personal projects and learning MERN stack development.</p>
+  <p id="summary">I am seeking an entry level position as a web developer. I am eager to apply my skillset to new problems while continuing to expand my knowledge. While pursuing a degree at Chattanooga State, I'm also working on personal projects, freelancing and learning MERN stack development.</p>
   <button id="education">Education</button>
   <ul style='opacity: 0'>
     <li>North Forsyth High School</li>
