button hover and resume update

--- a/resume/index.html
+++ b/resume/index.html
@@ -13,6 +13,7 @@
     <h1>Mark Siegrist</h1>
     <h2>Web Developer</h2>
     <p>m.siegrist92@gmail.com - Chattanooga, TN</p>
+
     <h1>Skills</h1>
 
     <div id="skills_cont">
@@ -75,8 +76,8 @@
 
   <h1>Experience</h1>
   <div class='proj'>
-    <h2>Technologic, LLC</h2>
-    <h3>Freelance Web Developer</h3>
+    <h2>Web Developer</h2>
+    <h3>Technologic, LLC</h3>
     <h4>October, 2020 - Current</h4>
     <ul>
       <li>Developed a headless CMS geared towards SEO using NextJS, Strapi and Materialize CSS</li>
