--- a/resume/index.html
+++ b/resume/index.html
@@ -77,28 +77,27 @@
   <h1>Experience</h1>
   <div class='proj'>
     <h2>Web Developer</h2>
-    <h3>Technologic, LLC</h3>
+    <h3>Technologic, LLC - Chattanooga</h3>
     <h4>October, 2020 - Current</h4>
     <ul>
-      <li>Developed a headless CMS geared towards SEO using NextJS, Strapi and Materialize CSS</li>
+      <li>Develop a headless CMS project using Strapi, NextJS and Materialize CSS framework</li>
       <br>
-      <li>Created page templates for CMS to ensure consistent styling and seamless entry of content </li>
+      <li>Created CMS page templates for writers to easily enter content while retaining consistent responsive styling</li>
       <br>
-      <li>Collaborated directly with owner on code management, new functionality, and project deadlines</li>
+      <li>Wrote scripts to dynamically generate Structured Data and Sitemaps on build in NextJS</li>
+      <br>
+      <li>Coded contact form in React which sends emails to business owners through the Strapi API</li>
+      <br>
+      <li>Design and implement a dynamic HTML head in Strapi and NextJS to optimize SEO per page</li>
     </ul>
   </div>
 
   <h1>Goals</h1>
-  <p id="summary">I am seeking an entry level position as a web developer. I am eager to apply my skillset to new problems while continuing to expand my knowledge. While pursuing a degree at Chattanooga State, I'm also working on personal projects, freelancing and learning MERN stack development.</p>
+  <p id="summary">Dedicated and eager web developer seeking an entry-level position.</p>
   <button id="education">Education</button>
   <ul style='opacity: 0'>
-    <li>North Forsyth High School</li>
-    <br>
-    <li>Kennesaw State University</li>
-    <li class='clist'>College Algrebra, Composition 1 & 2, Ways of Knowing</li>
-    <br>
     <li>Chattanooga State Community College</li>
-    <li class='clist'>Currently Attending - Associate's Computer Programming</li>
+    <li class='clist'>Associate's Computer Science - 2021</li>
   </ul>
     <script src="script.js"></script>
   </body>
